--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Piotr Grzymowicz",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -20,7 +21,8 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.4",
-    "nodemailer": "^6.4.11"
+    "nodemailer": "^6.4.11",
+    "nodemailer-express-handlebars": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
